// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Component should provide a "log in" link given user is NOT logged in 1`] = `
<div
  id="footer"
>
  
    
  <h3>
    Need help?
  </h3>
  
    
  <p>
    Contact | Map | Log in
  </p>
  

</div>
`;

exports[`Footer Component should provide a "log out" link given user is logged in 1`] = `
<div
  id="footer"
>
  
    
  <h3>
    Need help?
  </h3>
  
    
  <p>
    Contact | Map | Log out
  </p>
  

</div>
`;
